--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,6 @@ android {
 
 dependencies {
     provided files('libs/XposedBridgeApi-82.jar')
+    compile 'com.android.support:appcompat-v7:23.1.1'
 }
 
